# gps-cpp-client

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  apps.json  build.py  build.sh  cmake-build.sh  cmake-generate.sh  docker-compose.yml  gstreamer_app.sh
cmake/: FindGPS.cmake
src/: CMakeLists.txt
src/gps_service_app/: CMakeLists.txt
src/gps_service_app/src/: main.cpp
src/gps_service_client_app/: CMakeLists.txt
src/gps_service_client_app/src/: main.cpp
src/gps_service_client_lib/: CMakeLists.txt
src/gps_service_client_lib/src/: gps_service_client.cpp
src/gps_service_lib/: CMakeLists.txt
src/grpc_client_app/: CMakeLists.txt
src/grpc_client_lib/: CMakeLists.txt
src/grpc_server_app/: CMakeLists.txt
src/grpc_server_lib/: CMakeLists.txt
src/gstreamer_app/: CMakeLists.txt
src/gstreamer_app/src/: main.cpp
src/proto/: CMakeLists.txt  gps_service.proto
src/restinio_example/: CMakeLists.txt
src/restinio_example/src/: book.hpp  example_controller.hpp  generic_controller.hpp  itf_generic_controller.hpp  main.cpp  per_request_data.hpp  spdlog_logger.hpp  vector_container.hpp
src/restinio_example/src/epr/: generic_epr_controller.hpp  itf_generic_epr_controller.hpp
src/restinio_example/src/express/: generic_express_controller.hpp  itf_generic_express_controller.hpp
src_old/: CMakeLists.txt
src_old/grpc_client_app/: CMakeLists.txt
src_old/grpc_client_lib/: CMakeLists.txt
src_old/grpc_server_app/: CMakeLists.txt
src_old/grpc_server_lib/: CMakeLists.txt
src_old/proto/: CMakeLists.txt
(+17 files in other folders)
